till self page fragments

--- a/css/c18.css
+++ b/css/c18.css
@@ -1,6 +1,6 @@
 h1{
   background:url("../img/usaf.jpg") no-repeat;
   text-indent: -9999px;
-  width:144;
-  height:121;
+  width:144px;
+  height:121px;
 }
