--- a/960_padding_corrected/css/960_12_col.css
+++ b/960_padding_corrected/css/960_12_col.css
@@ -320,9 +320,9 @@ body {
   clear: both;
   display: block;
   overflow: hidden;
-  /*visibility: hidden;*/
+  visibility: hidden;
   width: 0;
-  /*height: 0;*/
+  height: 0;
 }
 
 /* http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified */
